# storage-py

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  LICENSE  MAINTAINERS.md  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  stale.yml
_sources/: index.rst.txt
_sources/api/: client.rst.txt  index.rst.txt  types.rst.txt
api/: bucket.html  client.html  index.html  types.html
docs/: conf.py
docs/api/: bucket.rst  index.rst
examples/: index.html
storage/: storage_client.py
storage3/: __init__.py  constants.py  exceptions.py  resumable.py  storage_client.py  types.py  utils.py  version.py
storage3/_async/: bucket.py  client.py  file_api.py  resumable.py
storage3/_sync/: bucket.py  client.py  file_api.py  resumable.py
tests/: test_client.py  test_exceptions.py  test_utils.py  tests.env  utils.py
tests/_async/: conftest.py  test_bucket.py  test_client.py
tests/_sync/: conftest.py  test_bucket.py  test_client.py
tests/resumable/: README.md  conftest.py  test_resumable.py
