[tool.poetry]
authors = [
  "Joel Lee <joel@joellee.org>",
  "Leon Fedden <leonfedden@gmail.com>",
  "Daniel Reinón García <danielreinon@outlook.com>",
  "Leynier Gutiérrez González <leynier41@gmail.com>",
  "Anand Krishna <anand2312@proton.me>"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Supabase Storage client for Python."
documentation = "https://supabase.github.io/storage-py"
homepage = "https://supabase.github.io/storage-py"
license = "MIT"
name = "storage3"
readme = "README.md"
repository = "https://github.com/supabase/storage-py"
version = "0.12.2" # {x-release-please-version}


[tool.poetry.dependencies]
httpx = {version = ">=0.26,<0.29", extras = ["http2"]}
python = "^3.9"
deprecation = "^2.1.0"
pydantic = "2.11.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.21.0"
pytest-cov = "^6.1.0"
python-dotenv = "^1.1.0"
Sphinx = "^7.1.2"
sphinx-press-theme = "^0.9.1"
unasync-cli = "^0.0.9"
sphinx-toolbox = "^3.4.0"
ruff = "^0.12.1"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  # "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]
ignore = ["F401", "F403", "F841", "E712", "E501", "E402", "UP006", "UP035"]
# isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "tests"
filterwarnings = [
    "ignore::DeprecationWarning", # ignore deprecation warnings globally
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
